--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@craigmcc/shared-react",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Library of useful React components to be shared across applications.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -48,6 +48,7 @@
     "bootstrap": ">= 5",
     "react": ">=17 || >=18",
     "react-bootstrap": ">= 2.2",
-    "react-dom": ">=17 || >=18"
+    "react-dom": ">=17 || >=18",
+    "react-hook-form": ">=7.30"
   }
 }
