--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "typescript": "^4.8.3"
   },
   "peerDependencies": {
+    "@hookform/resolvers": ">=2.9.8",
     "bootstrap": ">= 5",
     "react": ">=17 || >=18",
     "react-bootstrap": ">= 2.2",
     "react-dom": ">=17 || >=18",
     "react-hook-form": ">=7.34",
-    "react-toastify": ">=8.2"
+    "react-toastify": ">=8.2",
+    "yup": ">=0.32.11"
   }
 }
