--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@craigmcc/shared-react",
-  "version": "2.1.0",
+  "version": "2.1.1-alpha1",
   "description": "Library of useful React components to be shared across applications.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -47,10 +47,10 @@
   "peerDependencies": {
     "@hookform/resolvers": ">=2.9.8",
     "bootstrap": ">= 5",
-    "react": ">=17 || >=18",
+    "react": "^18.2.0",
     "react-bootstrap": ">= 2.2",
     "react-bootstrap-icons": ">=1.9",
-    "react-dom": ">=17 || >=18",
+    "react-dom": "^18.2.0",
     "react-hook-form": ">=7.34",
     "react-toastify": ">=8.2",
     "yup": ">=0.32.11"
