--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "build": "tsc -p .",
     "publish": "npm publish --access public .",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build",
     "test": "jest",
     "testall": "CI=true jest",
     "tsc": "tsc",
@@ -40,9 +42,14 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.1",
     "jest": "^27.5.1",
+    "react-docgen-typescript": "^2.2.2",
+    "react-styleguidist": "^13.1.1",
+    "source-map-loader": "^4.0.1",
     "ts-jest": "^27.1.4",
+    "ts-loader": "^9.4.2",
     "typedoc": "^0.23.14",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "webpack": "^5.75.0"
   },
   "peerDependencies": {
     "@hookform/resolvers": ">=2.9.8",
