--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "styleguide:build": "styleguidist build",
     "test": "jest",
     "testall": "CI=true jest",
-    "tsc": "tsc",
-    "typedoc": "typedoc --cleanOutputDir --out apidocs src/index.ts"
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -47,7 +46,6 @@
     "source-map-loader": "^4.0.1",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.4.2",
-    "typedoc": "^0.23.14",
     "typescript": "^4.8.3",
     "webpack": "^5.75.0"
   },
