--- a/.github/workflows/UbuntuClientSmokeTest.yml
+++ b/.github/workflows/UbuntuClientSmokeTest.yml
@@ -4,9 +4,9 @@ on:
   #  workflow_dispatch:
   #    branches: [ main ]
   push:
-    branches: [ version-2.0 ]
+    branches: [ main ]
   pull_request:
-    branches: [ version-2.0 ]
+    branches: [ main ]
 
 jobs:
   UbuntuClientSmokeTest:
