--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "peerDependencies": {
     "@hookform/resolvers": ">=2.9.8",
-    "bootstrap": ">= 5",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": ">= 2.2",
     "react-bootstrap-icons": ">=1.9",
