--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@hookform/resolvers": ">=2.9.8",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
-    "react-bootstrap": ">= 2.2",
+    "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": ">=1.9",
     "react-dom": "^18.2.0",
     "react-hook-form": ">=7.34",
