--- a/package.json
+++ b/package.json
@@ -36,15 +36,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react-docgen-typescript": "^2.2.2",
     "react-styleguidist": "^13.1.1",
     "source-map-loader": "^4.0.1",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^4.8.3",
     "webpack": "^5.88.2"
